--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
+			link to main stylesheet
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-<!-- 	        		<li><a href="/cv">CV</a></li> -->
+<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
@@ -18,7 +18,7 @@
 
 			{{ content }}
 
-			</div><!-- /.container -->
+			</div>/.container
 			<footer>
 				<ul>
 					<li><a href="mailto:mchou120@gmail.com">email</a></li>
@@ -26,4 +26,4 @@
 				</ul>
 			</footer>
 		</body>
-	</html>
+	</html> -->
