--- a/_layouts/default00.html
+++ b/_layouts/default00.html
@@ -1,8 +1,7 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
-			link to main stylesheet
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
@@ -10,7 +9,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
+							<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
@@ -26,4 +25,4 @@
 				</ul>
 			</footer>
 		</body>
-	</html> -->
+	</html>
