--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,11 @@ notes: active
     <div class="note single">
       <h1 class="title">{{ page.title }}</h1>
 
-      <h2 class="date"><info datetime="{{ page.date }}">
-        {{ page.date | date_to_string }} {% if page.author %} by {{ page.author }} {% endif %}
-      </info></h2>
+<!--       <h2 class="date">
+  <info datetime="{{ page.date }}">
+    {{ page.date | date_to_string }} {% if page.author %} by {{ page.author }} {% endif %}
+  </info>
+</h2> -->
       <!-- Post content -->
       <div class="notebody">
         {{ content }}
