--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,8 +25,8 @@ notes: active
       <hr>
 
       <!-- Post comments -->
-      <div class="notecomments">
-        {% include disqus.html %}
-      </div>
+     <!--  <div class="notecomments">
+       {% include disqus.html %}
+     </div> -->
     </div><!-- / .note .single -->
 </div><!-- /.notes -->
